<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.AdditionalDetailsActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_43sdp"
        android:elevation="@dimen/_5sdp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_back_arrow"
            android:tint="@color/textHeader"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivBack"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:singleLine="true"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/lbl_additionaldetail"
            android:textColor="@color/textHeader"
            android:textSize="@dimen/text_18" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_10sdp">

            <EditText
                android:id="@+id/address_line1_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:hint="@string/lbl_address_line1"
                android:textSize="@dimen/text_14" />

            <EditText
                android:id="@+id/address_line2_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_5sdp"
                android:singleLine="true"
                android:hint="@string/lbl_address_line2"
                android:textSize="@dimen/text_14" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_below="@+id/from_layout_txt">

                    <Spinner
                        android:id="@+id/select_state"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:gravity="center_vertical"
                        android:paddingRight="@dimen/_10sdp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3px"
                        android:background="@color/view_color"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true" />

            </LinearLayout>


            <EditText
                android:id="@+id/pincode_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:singleLine="true"
                android:hint="@string/lbl_pincode"
                android:textSize="@dimen/text_14" />

            <EditText
                android:id="@+id/alternetmobile_et"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:singleLine="true"
                android:hint="@string/lbl_alternetmobile"
                android:textSize="@dimen/text_14" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>