<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_above="@+id/bottom_rel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text_you_want_to"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="@dimen/text_24"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/app_name"
                android:visibility="gone"
                android:textAllCaps="true"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_24"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_20sdp"/>

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_200sdp"
                android:src="@drawable/swayam_logo2"
                android:layout_gravity="center_horizontal"/>


            //Mobile
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_Mobile"
                style="@style/txt_ip_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_10_digits_mobile_number"
                android:theme="@style/txt_TextInAppearance"
                app:errorEnabled="true"
                android:fontFamily="@font/roboto_regular">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_Mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true"
                    android:textColor="@color/blue"
                    android:theme="@style/txt_EditInAppearance" />

            </com.google.android.material.textfield.TextInputLayout>

            //mpin
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_Mpin"
                style="@style/txt_ip_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_otp"
                android:theme="@style/txt_TextInAppearance"
                app:errorEnabled="true"
                android:visibility="gone"
                android:fontFamily="@font/roboto_regular">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_Mpin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="4"
                    android:singleLine="true"
                    android:fontFamily="@font/roboto_regular"
                    android:theme="@style/txt_EditInAppearance" />

            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp">

                <Button
                    android:id="@+id/btnContinue"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/bg_btn_shape"
                    android:fontFamily="@font/roboto_medium"
                    android:shadowColor="@color/blue"
                    android:layout_weight="1"
                    android:text="@string/lbl_login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_14"
                    android:layout_marginRight="@dimen/_5sdp"/>

                <Button
                    android:id="@+id/btnsignup"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:background="@drawable/bg_btn_shape"
                    android:fontFamily="@font/roboto_medium"
                    android:shadowColor="@color/blue"
                    android:text="@string/lbl_signup"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_14"
                    android:layout_marginLeft="@dimen/_5sdp" />

            </LinearLayout>




        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/bottom_rel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_100sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_5sdp">

        <RelativeLayout
            android:id="@+id/soham_logo_rel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/powered_by"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/s_name" />
            <TextView
                android:id="@+id/powered_by_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/powered_by"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_12" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/soham_logo_rel">

            <ImageView
                android:id="@+id/soham_txt"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_65sdp"
                android:src="@drawable/shoham_next_gen"/>

            <TextView
                android:id="@+id/tag_line_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_10sdp"
                android:text="Where technology meets necessity"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_8" />

        </RelativeLayout>


    </RelativeLayout>

    <include layout="@layout/loading_layout"/>

</RelativeLayout>