<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.EditProfileActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_43sdp"
        android:elevation="@dimen/_5sdp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/ic_back_arrow"
            android:tint="@color/textHeader"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivBack"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:singleLine="true"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/lbl_edit_profile"
            android:textColor="@color/textHeader"
            android:textSize="@dimen/text_18" />

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/profile_rel2"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="@dimen/_60sdp"
                    android:src="@drawable/ic_new_user"
                    android:tint="@color/colorPrimary"
                    android:padding="@dimen/_10sdp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_circle_shape"/>

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_camera"
                    android:padding="@dimen/_5sdp"
                    android:visibility="gone"
                    android:background="@drawable/circle_with_stoke"/>
            </RelativeLayout>

            //Name
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_Name"
                style="@style/txt_ip_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:theme="@style/txt_TextInAppearance"
                app:errorEnabled="true"
                android:layout_marginTop="@dimen/_20sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/blue"
                    android:fontFamily="@font/roboto_regular"
                    android:theme="@style/txt_EditInAppearance" />

            </com.google.android.material.textfield.TextInputLayout>

            //Mobile
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_Mobile"
                style="@style/txt_ip_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mobile_number"
                android:theme="@style/txt_TextInAppearance"
                app:errorEnabled="true"
                android:layout_below="@+id/tl_Name"
                android:fontFamily="@font/roboto_regular"
                android:layout_marginTop="@dimen/_10sdp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_Mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textColor="@color/blue"
                    android:singleLine="true"
                    android:fontFamily="@font/roboto_regular"
                    android:theme="@style/txt_EditInAppearance" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/btnsubmit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/bg_btn_shape"
                android:layout_below="@+id/tl_Mobile"
                android:fontFamily="@font/roboto_medium"
                android:shadowColor="@color/blue"
                android:text="@string/lbl_submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_12"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



    <com.naimee.swayam.utlis.theme3bottomnavigation.BottomNavigation
        android:id="@+id/bottomNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:bn_backgroundBottomColor="#ffffff"
        app:bn_countBackgroundColor="@color/colorPrimary"
        app:bn_countTextColor="#ffffff"
        app:bn_defaultIconColor="@color/textHeader"
        app:bn_rippleColor="#2f424242"
        app:bn_selectedIconColor="@color/colorPrimary"
        app:bn_shadowColor="#E2E2E2" />


    <include layout="@layout/loading_layout"/>

</RelativeLayout>